# polyfly

./: .gitignore  Dockerfile  README.md  README_INSTALL_HSL.md  pyproject.toml
conda/: environment.yml  environment2.yml  environment_polyfly.yml
data/params/experiments/: base.yaml  maze_1.yaml  maze_2.yaml  maze_3.yaml  maze_4.yaml  maze_5.yaml  maze_6.yaml  maze_7.yaml  maze_8.yaml  maze_9.yaml
scripts/: docker_run_dev.sh  gpt_query.txt  plot_rosbag.py  run_generate_forest.sh  run_interactive_forest.sh  run_planner.sh
scripts/linting/: apply_linting.sh  black.toml
src/poly_fly/: acados_ocp_nlp.json  acados_sim_solver_nmpc.json
src/poly_fly.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/poly_fly/c_generated_code/: Makefile  acados_sim_solver_quadrotor.h  acados_solver_quadrotor.c  acados_solver_quadrotor.h  main_quadrotor.c  main_sim_quadrotor.c
src/poly_fly/controller/: acados_ocp_nlp.json  acados_sim_solver_nmpc.json  controller.py  mpc.py  track_trajectory.py
src/poly_fly/data_io/: enums.py  utils.py  viz_distribution.py  zarr_io.py
src/poly_fly/deep_poly_fly/: train.py  train_image_encoder.py
src/poly_fly/forest_planner/: cleanup_files.py  create_video.py  create_video_Raw.py  forest_params.py  generate_forest.py  interactive_gen_forest.py  interactive_generate_forest.py  viewer_policy.py
src/poly_fly/model/: acados_sim.json  acados_sim_rl.json  model.py
src/poly_fly/motion_profiles/: bicycle_traj.py  profiles.py
src/poly_fly/optimal_planner/: global_planner.py  planner.py  polytopes.py  use_planner.py
tests/: diff_flatness_test.py
(+34 files in other folders)
